Orders Index and Show pages UI have been enhanced

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <%= provide(:title, @current_user.company.name + ' ' + 'Orders') %>
 <div class="container">
-  <div class="message">
+  <div class="message" style="margin-top:24px;">
     <div class="col-xs-12 col-md-6" style="font-size:2.2em;color:#696969;">
       <b><%= current_user.company.name.to_s %> Orders</b>
     </div>
