--- a/app/assets/stylesheets/orders/_orders_index.scss
+++ b/app/assets/stylesheets/orders/_orders_index.scss
@@ -2,7 +2,8 @@
 //   background-color: #fff;
 // }
 .message {
-  background-color: #F8F8FF;
+  // background-color: #F8F8FF;
+  background-color: white;
   display: flex;
   align-items: center;
   padding: 20px;
