--- a/app/assets/stylesheets/orders/_show.scss
+++ b/app/assets/stylesheets/orders/_show.scss
@@ -1,3 +1,11 @@
+#order-show-page {
+  margin: 24px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.15);
+  background: white;
+  padding: 24px;
+}
+
 #foo {
   display:none;
   margin:0;
