Customers can now see ordering tips when placing an order

--- a/app/assets/stylesheets/orders/_form.scss
+++ b/app/assets/stylesheets/orders/_form.scss
@@ -6,8 +6,10 @@
   color:#696969;
 }
 
-.container {
-  width:100%;
+.form-container {
+  background: white;
+  padding: 24px;
+  margin: 24px;
 }
 
 textarea {
