--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:title, @current_user.company.name + ' ' + 'Orders') %>
-<div class="container">
+<div class="orders-index">
   <div class="message" style="margin-top:24px;">
     <div class="col-xs-12 col-md-6" style="font-size:2.2em;color:#696969;">
       <b><%= current_user.company.name.to_s %> Orders</b>
@@ -47,10 +47,10 @@
           <%#= link_to "Delete", orders_path(o) ,method: :destroy, data: {confirm: "Are you sure?"}, class: "btn btn-success" %>
         </div>
         <div class="message-actions">
-          <p><%= link_to order_path(o.id) do %><i class="fa fa-eye"></i><% end %></p>
+          <p><%= link_to order_path(o.id) do %><i class="fa fa-eye" style="color:grey;"></i><% end %></p>
           <% if o.status == "Ordered" %>
           <p><%= link_to edit_order_path(o.id) do %><i class="fa fa-pencil"></i><% end %></p>
-          <p><%= link_to cancel_order_path(o.id),method: :delete, data: {confirm: "Are you sure you want to cancel this order?"} do %><i class="fa fa-trash"></i><% end %></p>
+          <p><%= link_to cancel_order_path(o.id),method: :delete, data: {confirm: "Are you sure you want to cancel this order?"} do %><i class="fa fa-trash" style="color:red;"></i><% end %></p>
           <% end %>
         </div>
       </div>
