--- a/app/views/admin/dashboard/_sales_staff_customers_orders_results.html.erb
+++ b/app/views/admin/dashboard/_sales_staff_customers_orders_results.html.erb
@@ -2,11 +2,13 @@
   <tr>
     <th>Order#</th>
     <th>Status</th>
-    <th>Total Price</th>
     <th>Created At</th>
     <th>Customer</th>
     <th>Company</th>
     <th>Admin Assigned</th>
+    <th>Total Price</th>
+    <th>% Commission</th>
+    <th>% Commission Val</th>
   </tr>
 
   <%# @sales_staff_companies_orders = Order.where("orders.created_at >= ? AND orders.created_at <= ?", @start_date.to_datetime.midnight..@start_date.to_datetime.end_of_day, @end_date.to_datetime.to_time.end_of_day).joins(:company).where("companies.account_owner = ?", @sales_rep).page(params[:companies_orders]).per(15) %>
@@ -23,13 +25,23 @@
         <% else %>
         <td class="status_tag Cancelled"><%= orders.status.upcase %></td>
         <% end %>
-        <td><%= number_to_currency orders.total_price %></td>
         <td><%= orders.created_at.strftime("%A, %b %d - %H:%M:%S") %></td>
         <td><%= orders.user.forname + " " + orders.user.surname %></td>
         <td><%= orders.company.name %></td>
         <td><%= orders.taken_by %></td>
+        <td><%= number_to_currency orders.total_price %></td>
+        <td><%= @commission = User.find(@sales_rep).commission_rate.blank? ? 0 : User.find(@sales_rep).commission_rate %>%</td>
+        <% @comm_val = number_to_currency orders.total_price * @commission.to_i/100.to_f %>
+        <td><%= @comm_val.blank? ? nil : @comm_val %></td>
       </tr>
     <% end %>
+      <tr>
+        <td colspan="5"></td>
+        <td>Total Sales:</td>
+        <th><%= number_to_currency @sales_staff_companies_orders.collect { |o| o.total_price }.sum %></th>
+        <td>Total Commission:</td>
+        <th><%= number_to_currency @sales_staff_companies_orders.collect { |o| o.total_price * @commission/100.to_f }.sum %></th>
+      </tr>
 </table>
 
 <div class="pagination">
@@ -49,17 +61,17 @@
     border-collapse: collapse;
     max-width: 100%;
     table-layout: fixed;
-    word-wrap:break-all;
-    box-shadow: 0px 4px 8px 0px rgba(176,176,176,1)
+    word-wrap:break-word;
+    box-shadow: 0px 4px 8px 0px rgba(176,176,176,1);
     /*display: flex;
     flex-flow: column;*/
-    /*word-wrap:break-word;*/
+    /*word-wrap:break-all;*/
   }
 
   td, th {
     text-align: left;
     padding: 8px;
-    white-space: normal;
+    white-space: normal !important;
     word-wrap:break-all;
   }
 
@@ -115,3 +127,10 @@
     align-items: center;
   }
 </style>
+
+
+
+
+
+
+
