--- a/app/views/admin/dashboard/sales_staff_reports.csv.erb
+++ b/app/views/admin/dashboard/sales_staff_reports.csv.erb
@@ -1,6 +1,6 @@
 <%- headers = ['Order#', 'Status', 'Created At', 'Customer', 'Company', 'Admin Assigned', 'Total Price', "% Commission", "% Commission Value"] -%>
 <%= CSV.generate_line headers %>
 <%- @sales_staff_companies_orders.each do |orders| -%>
-<%= CSV.generate_line([orders.id, orders.status, orders.created_at.to_date,orders.user.forname + " " + orders.user.surname, orders.company.name, orders.taken_by, orders.total_price, @commission = User.find(@sales_rep).commission_rate, orders.total_price * @commission/100.to_f]) -%>
+<%= CSV.generate_line([orders.id, orders.status, orders.created_at.to_date,orders.user.forname + " " + orders.user.surname, orders.company.name, orders.taken_by, orders.total_price, @commission = User.find(@sales_rep).commission_rate.to_i, orders.total_price * @commission/100.to_f]) -%>
 <%- end -%>
 <%= CSV.generate_line([nil,nil,nil,nil,nil,"Total Sales:", @sales_staff_companies_orders.collect { |o| o.total_price }.sum, "Total Commission:", @sales_staff_companies_orders.collect { |o| o.total_price * @commission/100.to_f }.sum ]) -%>
