--- a/app/views/admin/orders/_edit_order_items_form.html.erb
+++ b/app/views/admin/orders/_edit_order_items_form.html.erb
@@ -1,5 +1,6 @@
 <%# @order_items = @order.order_items %>
-<% if params[:action] == "new" %>
+<%# if params[:action] == "new" %>
+<% unless @order_errors.blank? %><p id="order-errors"><%= @order_errors.join %></p><% end %>
   <%= simple_form_for [:admin,@order] do |f| %>
 
     <table style="color:#696969;">
@@ -21,7 +22,7 @@
 
         <!-- <td><%#= object.product.product_code %></td> -->
 
-    <tr>
+    <tr class="order-item order-item-<%=oi.object.id%>">
       <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.order(product_code: :asc).collect { |p| [p.product_code,p.id,class: "product_code-#{p.id}"]},
                         input_html: { class: " chosen-select product_code product_code-#{p_code_counter+=1}"} %></td>
       <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.collect { |p| [p.description,p.id]},
@@ -32,6 +33,10 @@
       <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.collect { |p| [p.pack_size,p.id]},
                         input_html: { class: "product_packsize product_packsize-#{p_packsize_counter+=1}", disabled: true} %></td>
       <td class="total-price total-price-<%=p_total_price_counter+=1%>"><%#= number_to_currency oi.object.product.price * oi.object.quantity.to_i %></td>
+      <!-- <td><%#= oi.input :_destroy, as: :boolean, label: 'Delete' %></td> -->
+      <% if oi.object.id.nil? == false %>
+      <td><%= link_to "Delete", admin_order_order_item_path(oi.object.order.id,oi.object.id), method: :delete, data: { remote: true, confirm: 'Are you sure?' }%></td>
+      <% end %>
     </tr>
 
         <!-- <td><%#= oi.object.product.description %></td> -->
@@ -45,56 +50,6 @@
       </tr>
     </table>
   <% end %>
-
-
-<% elsif params[:action] == "edit" %>
-<% @order = Order.find(params[:id]) %>
-  <%= simple_form_for [:admin,@order] do |f| %>
-
-    <table style="color:#696969;">
-      <tr>
-        <th>Product Code</th>
-        <th>Description</th>
-        <th>Unit Price</th>
-        <th>Quantity</th>
-        <th>Pack Size</th>
-        <th>Total Price</th>
-      </tr>
-      <% p_code_counter = -1 %>
-      <% p_desc_counter = -1 %>
-      <% p_price_counter = -1 %>
-      <% p_packsize_counter = -1 %>
-      <% p_total_price_counter = -1 %>
-      <% p_quantity_counter = -1 %>
-      <%= f.simple_fields_for :order_items do |oi| %>
-
-        <!-- <td><%#= object.product.product_code %></td> -->
-
-    <tr>
-      <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.order(product_code: :asc).collect { |p| [p.product_code,p.id,class: "product_code-#{p.id}"]},
-                        input_html: { class: " chosen-select product_code product_code-#{p_code_counter+=1}"} %></td>
-      <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.collect { |p| [p.description,p.id]},
-                        input_html: { class: "product_description product_description-#{p_desc_counter+=1}", disabled: true} %></td>
-      <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.collect { |p| [p.price,p.id]},
-                        input_html: { class: "product_price product_price-#{p_price_counter+=1}", disabled: true} %></td>
-      <td><%= oi.input :quantity, label: false, input_html: {class: "quantity-#{p_quantity_counter+=1}"} %></td>
-      <td><%= oi.input :product_id, label: false, as: :select, collection: Product.all.collect { |p| [p.pack_size,p.id]},
-                        input_html: { class: "product_packsize product_packsize-#{p_packsize_counter+=1}", disabled: true} %></td>
-      <td class="total-price total-price-<%=p_total_price_counter+=1%>"><%= oi.object.product.price * oi.object.quantity.to_i %></td>
-    </tr>
-
-        <!-- <td><%#= oi.object.product.description %></td> -->
-        <!-- <td><%#= number_to_currency oi.object.product.price %></td> -->
-        <!-- <td><%#= oi.object.product.pack_size %></td> -->
-        <!-- <td><%#= number_to_currency oi.object.product.price * oi.object.quantity.to_i %></td> -->
-      <% end %>
-      <tr>
-        <td colspan="5" style="text-align:right;"><b>Your Order Total:</b></td>
-        <td colspan="6" class="order-total"><b> <%=number_to_currency @order.calculate_total %></b></td>
-      </tr>
-    </table>
-  <% end %>
-<% end %>
 
 <script>
   window.onload = function() {
@@ -150,6 +105,16 @@
 </script>
 
 <style>
+
+#order-errors {
+  background: #EE5F5B;
+  margin: 0;
+  text-align: center;
+  color: white;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 2px;
+}
 
 .product_description, .product_price, .product_packsize {
   -webkit-appearance: none;
