Editing a Shipping Date now provides functionality for date and time

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,6 +15,7 @@
 // @import "active_admin/base";
 @import "chosen";
 @import "admin/index";
+@import "datetimepicker/jquery.datetimepicker.min";
 
 // @import "select2";
 
