error correction fixed

--- a/app/views/admin/dashboard/_product_stock_query_results_table.html.erb
+++ b/app/views/admin/dashboard/_product_stock_query_results_table.html.erb
@@ -14,7 +14,7 @@
     <td><%= product.product_code %></td>
     <td><%= product.pack_size %></td>
     <td><%= number_to_currency product.price %></td>
-    <td><%= product.current_stock %></td>
+    <td><%= product.current_stock_level %></td>
     <td><%= product.stocks.count %></td>
   </tr>
 </table>
