--- a/app/views/admin/dashboard/_pharmacy_search.html.erb
+++ b/app/views/admin/dashboard/_pharmacy_search.html.erb
@@ -1,10 +1,21 @@
 <%= form_tag admin_dashboard_pharmacy_search_path, remote: true, method: :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
+  <p style="padding-left:20px;">
+    <%= text_field_tag :search, params[:search], placeholder: "Enter a Postcode..." %>
     <%= submit_tag "Search Near", name: nil %>
   </p>
 <% end %>
 
 <div id="result"></div>
 
+<style>
+  #search {
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+</style>
 
