--- a/app/views/admin/dashboard/pharmacy_search.js.erb
+++ b/app/views/admin/dashboard/pharmacy_search.js.erb
@@ -1,1 +1,62 @@
 $('#result').html("<%= escape_javascript(render(:partial => "pharmacy_search_results")).html_safe %>");
+
+
+var locations = []
+<% @pharmacy.each do |p| %>
+  <% next if p.latitude.to_f == 0.0 and p.longitude.to_f == 0.0 %>
+  locations.push({lat: <%= p.latitude.to_f %>, lng: <%= p.longitude.to_f %>})
+<% end %>
+
+function initMap() {
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 6,
+    center:locations[0]
+  });
+
+  locations.forEach(function(location){
+    var resultsMarker = new google.maps.Marker({
+      position: location,
+      map: map,
+      title: 'Hello World!'
+    });
+  })
+
+  var searchMarker = new google.maps.Marker({
+    position: {lat: <%= @result[0] %>, lng: <%= @result[1] %>},
+    map: map,
+    label: {
+      text: 'S',
+      color: 'blue',
+    },
+    // icon: {
+    //   url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"                           }
+    // });,
+    icon: {
+      BitmapDescriptorFactory.defaultMarker(BitmapDescriptorFactory.HUE_AZURE);
+    }
+
+  // setMarkers(map, bounds, locations, 'http://maps.google.com/mapfiles/ms/icons/red-dot.png');
+  // map.fitBounds(bounds);
+}
+
+
+
+// setMarkers = function(map, bounds, locations, icon) {
+//   $.each(locations, function(index, value) {
+//     var infowindow, lat, latlngset, long, marker;
+//     lat = value[0];
+//     long = value[1];
+//     latlngset = new google.maps.LatLng(lat, long);
+//     marker = new google.maps.Marker({
+//       map: map,
+//       position: latlngset,
+//       icon: icon
+//     });
+//     infowindow = new google.maps.InfoWindow;
+//     google.maps.event.addListener(marker, 'click', function() {
+//       infowindow.setContent(value[2]);
+//       infowindow.open(map, marker);
+//     });
+//     return bounds.extend(marker.position);
+//   });
+// };
